@@ -1,5 +1,12 @@
 2011-03-21  Emilio Meschi  <emilio.meschi@cern.ch>
 
+	* tag V00-16-04
+	* acceptDQMdiscard flag now counting 
+	* moved flag for discard after sent for dqm cells
+	* added timeout on send for dqm cells
+	
+2011-03-21  Emilio Meschi  <emilio.meschi@cern.ch>
+
 	* tag V00-16-03
 	* split spurious dqm discard message and demote one cat to WARN
 
